--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ deploy:
   skip_cleanup: true # Prevents Travis from resetting the working directory made during the build
   github_token: 873355edccb5fcc85c6468faff1472131c2219c5 # GitHub access token to use when pushing to the gh-pages branch
   local_dir: out # Directory to push to the gh-pages branch
-  fqdn: bayuslari.com
+  fqdn: bayuslari.com #update
   on:
     branch: master # Only deploy when the build is on master branch
