--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "learn-starter",
+  "name": "bayuslari.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "npm run build && next export"
   },
   "dependencies": {
     "@ap.cx/react-fullpage": "^0.2.0",
