--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^2.7.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
+    "next-dark-mode": "^3.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-slick": "^0.27.11",
