--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-dark-mode": "^3.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-responsive": "^8.2.0",
     "react-slick": "^0.27.11",
     "sass": "^1.26.10"
   }
