--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "gsap": "^3.7.0",
     "isomorphic-unfetch": "^3.0.0",
     "locomotive-scroll": "^4.1.1",
-    "next": "9.3.5",
+    "next": "^11.0.1",
     "next-dark-mode": "^3.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-slick": "^0.27.11",
     "sass": "^1.26.10",
     "use-resize-observer": "^7.0.0"
