--- a/components/.prettierrc
+++ b/components/.prettierrc
@@ -2,7 +2,7 @@
 	"useTabs": false, 
 	"printWidth": 80, 
 	"tabWidth": 2, 
-	"singleQuote": true, 
+	"singleQuote": false, 
 	"trailingComma": "none", 
 	"jsxBracketSameLine": false, 
 	"parser": "typescript" 
