--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gsap": "^3.7.0",
     "isomorphic-unfetch": "^3.0.0",
     "locomotive-scroll": "^4.1.1",
-    "next": "^11.0.1",
+    "next": "12",
     "next-dark-mode": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
